don't use tar for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ branches:
 
 before_script:
   - wget "$URL" -q -O travis-encryption-keys.tar.gz
-  - tar -xvf travis-encryption-keys.tar.gz
+  # - tar -xvf travis-encryption-keys.tar.gz
 
 before_install:
   - rm -rf /Users/travis/Library/Developer/Xcode/DerivedData/TravisEncryptionKeys-*/
